\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
%% some pre-defined commands: \R, \code, \acronym, \url, \file, \pkg

\name{NEWS}
\title{News for Package 'surveillance'}
\encoding{latin1}


\section{Changes in surveillance version 1.12.0 (2016-03-16)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item Overhaul of the \code{"sts"} implementation. This mostly
    affects package-internal code, which is simpler, cleaner and better
    tested now.
    Beyond that, the user-level constructor function \code{sts()} now
    has explicit arguments for clarity and convenience.
    For instance, its first argument sets the \code{observed} slot and
    no longer needs to be named, i.e.,
    \code{sts(mycounts, start=c(2016,3), frequency=12)}
    works just like for the classical \code{ts()} function.
  }
}

\subsection{DOCUMENTATION}{
  \itemize{
    \item New \code{vignette("twinstim")} based on a recently accepted
    manuscript for the Journal of Statistical Software.
    \item Improved the documentation on various help pages.
    \item The vignettes are again compatible with \R < 3.2.0.
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item \code{stsplot_spacetime()} now recognizes its \code{opts.col}
    argument.
    
    \item Conversion from \code{"ts"} to \code{"sts"} using
    \code{as(ts, "sts")} could set a wrong start time. For instance,
    \code{as(ts(1:10, start=c(1959,2), frequency=4), "sts")@start} was
    \code{c(1959,1)}.
  }
}

}



\section{Changes in surveillance version 1.11.0 (2016-02-08)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item \code{update.epidata()} can now handle a distance matrix
    \code{D} in the form of a classed \code{"Matrix"}
    (suggested by George Wood).
    
    \item \code{glrnb()} can now handle \code{ret="cases"} for the
    generalized likelihood ratio detector based on the negative binomial
    distribution. It's based on a brute-force search and hence might be
    slow in some situations.
